# legalens

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  main.py  middleware.py
app/database/: connection.py  models.py
app/diff/: calibration.py  dsl_engine.py  engine.py  matcher.py  reasoning_graph.py  risk_scorer.py  rule_engine.py  segmentor.py
app/models/: schemas.py
app/routers/: analysis.py
frontend/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/diff/: page.tsx
frontend/src/components/: ClauseCard.tsx  RiskBadge.tsx
frontend/src/lib/: api.ts
infra/: main.tf  outputs.tf  variables.tf
k8s/: api-deployment.yaml  ingress.yaml  namespace.yaml
models/: calibration.json
monitoring/: loki-config.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
nginx/: Dockerfile  nginx.conf
rules/: legal_rules.yaml
scripts/: backup.sh  calibrate.py  galaxy_brain.py  restore.sh
tests/: conftest.py  test_calibration.py  test_diff.py  test_dsl_engine.py  test_engine.py  test_reasoning_graph.py  test_rule_engine.py  test_segmentor.py
